@@ -1,3 +1,8 @@
+2006-03-21  David Reveman  <davidr@novell.com>
+
+	* gnome/window-decorator/gnome-window-decorator.c (lower_window): Don't
+	try to lower a window below hidden windows or desktop windows.
+
 2006-03-20  David Reveman  <davidr@novell.com>
 
 	* plugins/wobbly.c (wobblyHandleEvent):
